@@ -1,3 +1,8 @@
+2005-11-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/pango-font.cc (pango_item_string_stencil): put
+	geometry.width into glyph-string too.
+
 2005-11-26  Nicolas Sceaux  <nicolas.sceaux@free.fr>
 
 	* scm/define-music-display-methods.scm (RevertProperty):
